# ZIME

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  concatenated  launcher.py  pyproject.toml  ruff_report.txt
backend/analytics/: __init__.py  base_engine.py  execution.py  execution_report.py  models.py  pipeline.py  registry.py
backend/api/: models.py  research.py  test_research.py
backend/app/: main.py
backend/backtesting/: __init__.py  broker.py  engine.py  exceptions.py  factory.py  metrics.py  models.py  portfolio.py  report.py  test_backtesting.py
backend/bootstrap/: __init__.py  pipeline_bootstrap.py
backend/cache/: __init__.py  key.py  models.py  provider.py
backend/cli/: formatter.py  main.py  test_cli.py
backend/composite/: __init__.py  composite_engine.py  models.py
backend/core/: __init__.py  api_constants.py  app_metadata.py  config_validation.py  constants.py  enums.py  factor_result.py  startup_validation.py  test_config_validation.py  types.py  validation.py
backend/corporate_actions/: __init__.py  adjustment_engine.py  (+7 more)
config/: desktop.json
docs/: ARCHITECTURE.md  ROADMAP.md
frontend/: app.py  controller.py  diag.py  event_bus.py  logging.py  main_window.py  service_registry.py  settings.py  version.py  worker.py
scripts/: build_release.py  probe_backtesting.py  probe_dashboard.py  probe_intelligence.py  probe_market_overview.py  probe_portfolio.py  probe_reporting.py  probe_screener.py  smoke_test.py
tests/: test_composite_engine.py  test_flat_base.py  test_pattern_engine.py  test_vcp.py
(+339 files in other folders)
